--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,6 +10,7 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.Health",DevComment="Health")
 +GameplayTagList=(Tag="Attributes.Vital.Mana",DevComment="Primary resource for using abilities")
++GameplayTagList=(Tag="Event.Montage.FireBolt",DevComment="")
 +GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
 +GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
 +GameplayTagList=(Tag="Message.ManaCrystal",DevComment="")
